@@ -1,3 +1,10 @@
+22/April/2020 - Version 7:
+
+ - Minor changes
+ - Using SHA512 hashing instead of MD5 hashing for more safety
+ - Added new function to delete account and data with it
+ - Changed Menu visuals
+
 22/April/2020 - Version 6:
 
  - Added new change login details function (Major!) (This took me so f**king long)
